plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.ai:spring-ai-bom:1.1.2"
    }
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    
    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
    
    // Bouncy Castle (ChaCha20-Poly1305 암호화)
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
    
    // Database
    runtimeOnly 'com.mysql:mysql-connector-j'
    runtimeOnly 'com.h2database:h2'
    
    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //스웨거
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //email
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // Thymeleaf (admin page)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // WebClient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    //gemini-api
    implementation 'org.springframework.ai:spring-ai-starter-model-google-genai'

    // AWS S3
    implementation platform('software.amazon.awssdk:bom:2.25.16')
    implementation 'software.amazon.awssdk:s3'

    // 마인드 레코드 본문 HTML sanitize (XSS 완화)
    implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20240325.1'

    // Google ID Token 검증 (구글 소셜 로그인)
    implementation 'com.google.api-client:google-api-client:2.7.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
